# Steg

./: .gitignore  .gitmodules  CMakeLists.txt  README.fr.md  README.md  main.cpp  readme.md
.github/workflows/: ci.yml
doc/: asm.md  steg.md  steganografer.md  stegasm.fr.md  stegasm.md
examples/3D/: WolfenSteg.steg  file_loader.steg  renderer.steg
examples/3D/assets/: VSWAP.WL6
examples/3D/game/: enemy_helper.steg  loader.steg  map_helper.steg  player_helper.steg  texture_helper.steg  things_helper.steg
examples/files/: files.md
examples/tetris/: tetris.stegasm
examples/tetris/game/: game_over.stegasm  map.stegasm  stats.stegasm
examples/tetris/game/blocks/: block_definition.stegasm  draw_alive_block.stegasm  place_current_block_on_map.stegasm
examples/tetris/game/inputs/: check_move_down.stegasm  check_right_left.stegasm  check_rotation.stegasm
examples/tetris/game/map/: line_detection.stegasm
examples/wolfensteg/: WolfenSteg.steg
examples/wolfensteg/assets/: GAMEMAPS.WL6  MAPHEAD.WL6  palette.hex
examples/wolfensteg/game/: player_helper.steg
libs/stegcommon/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Colors.h  Logger.cpp  Logger.h  utils.h
libs/stegcommon/utils/: utils.hpp
src/handlers/: IHander.h  StringHandler.cpp  handlers.h
src/steganographer/: Steganographer.cpp  Steganographer.h  constant.h  header.hpp
src/steganographer/sequences/: ReadSequence.cpp  ReadSequence.h  WriteSequence.cpp  WriteSequence.h  sequence_constant.h
src/utils/: Parameters.cpp  Parameters.h
steg/: CMakeLists.txt  main.cpp
steg/lsp/: CMakeLists.txt  main.cpp
steg/lsp/core/: Server.cpp  Server.h  Transport.cpp  Transport.h
steg/lsp/handlers/: DidChange.cpp  DidChange.h  DidOpen.cpp  DidOpen.h  Exit.cpp  Exit.h  Initialize.cpp  Initialize.h  SemanticTokensFull.cpp  SemanticTokensFull.h  Shutdown.cpp  Shutdown.h
steg/lsp/lsp/: Diagnostics.cpp  Diagnostics.h  DocumentStore.h  Tokens.cpp  Tokens.h
steg/src/: compiler.h  main.cpp
steg/src/IR/: IRConstantFolding.cpp  IRConstantFolding.h  IRGenerator.cpp  IRGenerator.h  IRLowering.cpp  IRLowering.h  IRPrinter.cpp  IRPrinter.h  IRRenumbering.h  ir_structure.h
steg/src/IR/utils/: exec.h
steg/src/asm_gen/: AsmGenerator.cpp  AsmGenerator.h  Registerallocator.cpp  Registerallocator.h
steg/src/ast/: ASTExpressionNode.cpp  ASTExpressionNode.h  ASTNode.h  ASTProgramNode.cpp  ASTProgramNode.h  ASTStatementNode.cpp  ASTStatementNode.h  ASTTypeNode.h  ASTVisitor.h
steg/src/lexer/: Lexer.cpp  Lexer.h  TextParser.cpp  TextParser.h  TokenMap.cpp  TokenMap.h  lexer_definitions.h
steg/src/linter/: Linter.cpp  Linter.h
steg/src/parser/: Parser.cpp  Parser.h  parser_expressions.h  parser_program.h  parser_utils.h
steg/src/parser/expressions/: parse_binary.h  parse_expressions.h  parse_expressions_utils.h  parse_primary.h  parse_types.h  parse_unary.h  parser_assignments.h
steg/src/parser/monadic/: monadic.hpp  string_parser.h
steg/src/parser/statements/: parse_block.h  parse_for.h  parse_if.h  parse_label_goto.h  parse_statements.h  parse_variables.h  parse_while.h
steg/src/semantic_analysis/: SymbolTable.h  analyzeExports.h
steg/src/semantic_analysis/exports/: ExportCollector.h
steganographer/: CMakeLists.txt
steganographer/handlers/: CodeHandler.cpp  FileHandler.cpp
steganographer/images/: Image.cpp  Image.h
steganographer/steganographer/: Header.hpp  SequenceManager.cpp  SequenceManager.h  Steganographer.cpp  Steganographer.h  constant.h
steganographer/steganographer/sequences/: ReadSequence.cpp  ReadSequence.h  WriteSequence.cpp  WriteSequence.h
steganographer/utils/: Parameters.cpp
stegasm/: CMakeLists.txt
stegasm/src/: check_instructions.hpp  instruction_utils.hpp  instructions.cpp  instructions.h  main.cpp
stegasm/src/assembler/: Assembler.cpp  Assembler.h  ISymbolSource.h  Linter.cpp  Linter.h  Symbol.cpp  Symbol.h  TextParser.cpp  TextParser.h
stegasm/src/assembler/utils/: FileSet.cpp  FileSet.h  InstructionSet.cpp  InstructionSet.h  LabelSet.cpp  LabelSet.h  SubtexturesSet.cpp  SubtexturesSet.h  VariableSet.cpp  VariableSet.h  utils.cpp  utils.h
stegasm/src/compiler/: Compiler.cpp  Compiler.h  TextParser.h
stegasm/src/interpreter/: Loader.cpp  Loader.h  Runtime.h  Vm.cpp  Vm.h  exceptions.h
stegasm/src/interpreter/instructions/: instruction.h
stegasm/src/interpreter/runtime/: Files.cpp  Files.h  GraphicalBackend.cpp  GraphicalBackend.h  InstructionViewImpl.h  Memory.cpp  Memory.h  Registries.cpp  Registries.h  Runtime.h  Utils.cpp  Utils.h
stegasm/src/interpreter/runtime/files/: File.cpp  File.h  Files.cpp  Files.h  Subtexture.h
stegasmLspServer/: CMakeLists.txt
stegasmLspServer/src/: main.cpp
test/: test_cli_parameters.cpp
(+9 files in other folders)
